[metadata]
name = efipy
version = 1.5
author = Lior Avrahami
description = python based easy file iterator, with recursive option, and file filtering. useful when you need to apply some function to a set of files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LiorAvrahami/efipy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    docutils
    safer-prompt-toolkit >= 1.3
    tqdm

[options.packages.find]
where = src